# OnePlusLambdaEA

./: .travis.yml  CMakeLists.txt  EA_solver.h  EAlgs.cpp  EAlgs.h  Practice.pro  README.md  chart_builder_main.cpp  fastEAlgs.cpp  fastEAlgs.h  fast_random.h  install-linux.bash  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  probability_t.cpp  probability_t.h  qcustomplot.cpp  qcustomplot.h
report/pseudoCode/: Makefile  pseudoCodes.tex
scripts/: addParam  recWalk
src/: CMakeLists.txt
src/chartBuilding/: CMakeLists.txt  chartBuilder.cpp  chartBuilder.h  chart_builder_main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xy_chart_building.cpp
src/measurement/: CMakeLists.txt  measurer.cpp  measurer.h  monte_carlo_measurement.cpp  resultsTable.cpp  resultsTable.h  runTimeMeasurment.cpp
src/offsprings/: offspring.h  offspringGenerator.h  oneMaxOffspring.h
src/onePlusLambdaAlgorithms/: CMakeLists.txt
src/onePlusLambdaAlgorithms/algorithmsCreation/: CMakeLists.txt  algorithmTags.h  algorithmsTags.cpp  solversFabric.cpp  solversFabric.h
src/onePlusLambdaAlgorithms/algorithmsImpl/: CMakeLists.txt  LeadingOnesSolver.h  adjustingParamsSolver.cpp  adjustingParamsSolver.h  internalReporter.cpp  internalReporter.h  oneMaxSolver.cpp  oneMaxSolver.h  onePlusLambdaSolver.h  staticParamsSolver.cpp  staticParamsSolver.h  theoryStaticParams.cpp  theoryStaticParams.h
src/onePlusLambdaSolvers/: CMakeLists.txt  adjustingParamsSolver.cpp  adjustingParamsSolver.h  oneMaxSolver.cpp  oneMaxSolver.h  onePlusLambdaSolver.h  staticParamsSolver.cpp  staticParamsSolver.h  theoryStaticParams.cpp  theoryStaticParams.h
src/paramsSearch/: CMakeLists.txt  monte_carlo_measurement.cpp  search_common.cpp  search_common.h  sequential_search.cpp
src/paramsSearch/measurement/: CMakeLists.txt  measurer.cpp  measurer.h  runTimeMeasurment.cpp
src/utils/: CMakeLists.txt  configParser.cpp  configParser.h  dump_params.cpp  fast_random.h  graphs_difference.cpp  growing_vector.h  logger.h  metrics.cpp  metrics.h  nextIndexGetter.cpp  nextIndexGetter.h  offspring.cpp  offspring.h  probability_t.cpp  probability_t.h  resultsTable.h  resultsTablePrinter.cpp  resultsTablePrinter.h  resultsTableScanner.cpp  resultsTableScanner.h  solversFabric.cpp  solversFabric.h
travis-install/: install-linux.bash
