set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost 1.66.0 COMPONENTS system REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(runTimeMeasurement runTimeMeasurment.cpp measurer.cpp)
target_link_libraries(runTimeMeasurement oneMaxSolvers configParser resultsPrinter solversFabric ${Boost_LIBRARIES})
add_executable(monte_carlo_measurement monte_carlo_measurement.cpp measurer.cpp)
target_link_libraries(monte_carlo_measurement oneMaxSolvers configParser resultsPrinter solversFabric ${Boost_LIBRARIES})
