add_library(probability STATIC probability_t.cpp)
add_library(configParser STATIC configParser.cpp)
add_executable(dumpParams dump_params.cpp)
target_link_libraries(dumpParams configParser)
add_library(resultsPrinter resultsTablePrinter.cpp)
find_package(Qt5Widgets REQUIRED)
add_library(resultsScanner resultsTableScanner.cpp)
target_link_libraries(resultsScanner Qt5::Widgets )
add_executable(graphs_difference graphs_difference.cpp)
target_link_libraries(graphs_difference resultsScanner)
add_library(solversFabric solversFabric.cpp)
target_link_libraries(solversFabric oneMaxSolvers)
