add_library(probability STATIC probability_t.cpp)
add_library(configParser STATIC configParser.cpp)
add_executable(dumpParams dump_params.cpp)
target_link_libraries(dumpParams configParser)
add_library(resultsPrinter STATIC resultsTablePrinter.cpp)
add_library(resultsScanner STATIC resultsTableScanner.cpp)
add_library(metrics metrics.cpp)
add_executable(graphs_difference graphs_difference.cpp)
target_link_libraries(graphs_difference resultsScanner metrics)
add_library(solversFabric STATIC solversFabric.cpp)
target_link_libraries(solversFabric oneMaxSolvers)
